trunk/Archive/0f0c211ea27f173102281b7b64837e99-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In constructor 'X::X()':
main.cpp:25:3: error: array used as initializer
   {
   ^
main.cpp: In constructor 'X::X(int)':
main.cpp:39:21: error: array used as initializer
     , m_a7{{1, 2}, 3}   // InitializerList_t(InitializerList_t(1, 2), 3)                       => each element is copy initialized:
                     ^
